--- a/css/styles/item_list.css
+++ b/css/styles/item_list.css
@@ -20,16 +20,20 @@
     overflow-y: auto;
     height: 520px;
     direction: ltr;
-    background-color: white;
 }
 
 #tableFixHead thead th {
     position: sticky;
+    background: rgb(223, 99, 99);
     top: 0;
 }
 
-th {
-    background: #eee;
+tbody tr:nth-child(odd) {
+    background-color: #f2f2f2;
+}
+
+tbody {
+    background-color: rgb(238, 224, 224);
 }
 
 
