--- a/css/styles/main_page.css
+++ b/css/styles/main_page.css
@@ -2,13 +2,13 @@ html {
     /* background: #9bc9e0; */
     /* background: linear-gradient(to right, #1d86df 0%, #39b49a 100%); */
     /* background: linear-gradient(to right, #88d6c5 0%, #99c7f0 100%); */
-    background: rgb(200, 243, 213);
+    /* background: rgb(200, 243, 213); */
     /* -webkit-font-smoothing: antialiased; */
 }
 
 header {
-    width: 95%;
-    /* margin: 0 auto; */
+    width: 100%;
+    /* margin: 0 auto;  */
 }
 
 body {
