--- a/css/nav.css
+++ b/css/nav.css
@@ -15,7 +15,7 @@ body {
 
 header {
     font-family: arial;
-    background: #2b3641;
+    background: #425262;
     /* background: #001f3d; */
     /* background: linear-gradient(to right, #596169 0%, #292e33 100%); */
     width: 100%;
