--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,8 @@ body {
     /* background: rgb(224, 205, 205); */
     /* background-color: #0a4b64; */
     /* background-color: #97e0ebc7; */
-    background-color: #3345578c;
+    background-color: #9fc7f0;
+    /* background-color: #3345578c; */
     text-align: right;
     /* background-color: #0d8396c7;
     position: relative;
