--- a/css/styles/setting.css
+++ b/css/styles/setting.css
@@ -13,8 +13,11 @@ body {
     width: 200px;
     background-color: #f1f1f1;
     position: fixed;
-    height: 100%;
+    height: 87%;
     overflow: auto;
+    z-index: -1;
+    margin-top: 75px;
+
 }
 
 .sidebar div {
@@ -38,7 +41,7 @@ body {
 div.content {
     margin-right: 200px;
     padding: 1px 16px;
-    height: 1000px;
+    /* height: 1000px; */
 }
 
 @media screen and (max-width: 700px) {
