--- a/css/styles/account_list.css
+++ b/css/styles/account_list.css
@@ -51,10 +51,11 @@ tbody {
 
 /* العنوان */
 
-#header {
+/* #header {
     height: 50px;
-}
+} */
 
 h3 {
     font-weight: bold;
+    margin-top: 50;
 }
