--- a/css/styles/setting.css
+++ b/css/styles/setting.css
@@ -15,8 +15,8 @@ body {
     position: fixed;
     height: 100%;
     overflow: auto;
-    z-index: -1;
-    margin-top: 75px;
+    /* z-index: -1; */
+    margin-top: 77px;
 
 }
 
