--- a/css/styles/help_file.css
+++ b/css/styles/help_file.css
@@ -22,7 +22,7 @@ body {
     overflow: auto;
     height: 100%;
     overflow: auto;
-    z-index: -1;
+    /* z-index: -1; */
     margin-top: 65px;
     
 }
