--- a/css/styles/main_page.css
+++ b/css/styles/main_page.css
@@ -6,21 +6,21 @@ html {
     /* -webkit-font-smoothing: antialiased; */
 }
 
-header {
-    width: 100%;
-    /* margin: 0 auto;  */
-}
-
 body {
     background-repeat: no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    position: relative;
 }
 
 #band {
-    width: 60%;
+    position: absolute;
+    top: 34%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70%;
     margin: 0 auto;
     display: grid;
     grid-template-rows: auto;
@@ -41,7 +41,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100%;
-    position: relative;
+    /* position: relative; */
     top: 0;
     transition: all 0.1s ease-in;
     border: rgba(255, 255, 255, 0);
