--- a/css/nav.css
+++ b/css/nav.css
@@ -115,6 +115,7 @@ header {
 
 .sub-menus ul {
     position: absolute;
+    z-index: 1;
     top: 54px;
     background-color: #fff;
     padding: 5px 0px;
