--- a/css/nav.css
+++ b/css/nav.css
@@ -82,7 +82,7 @@ header {
     top: -6px;
     left: 0px;
     border-radius: 4px;
-    transition: 0.2s;
+    /* transition: 0.2s; */
     z-index: -1;
 }
 
