--- a/css/styles/main_page.css
+++ b/css/styles/main_page.css
@@ -122,7 +122,7 @@ body {
     transform: translate(-15%, -5%);
     width: 110px;
     height: 170px;
-    background-color: cornflowerblue;
+    background-color: #425262;
     border: #fff;
     border-radius: 5%;
     box-shadow: 4px 4px 4px rgba(50, 50, 50, 0.363);
