--- a/css/nav.css
+++ b/css/nav.css
@@ -77,7 +77,7 @@ header {
     width: 100%;
     height: 0px;
     /* background-color: #6d6e70; */
-    background-color: #505050;
+    background-color: #7da6ce;
     position: absolute;
     top: -6px;
     left: 0px;
