--- a/css/styles/account_list.css
+++ b/css/styles/account_list.css
@@ -18,15 +18,16 @@
 #tableFixHead thead th {
     position: sticky;
     top: 0;
-    background: rgb(223, 99, 99);
+    background: #425262;
+    color: #fff;
 }
 
 tbody tr:nth-child(odd) {
-    background-color: #f2f2f2;
+    background-color: #d9e9fa;
 }
 
 tbody {
-    background-color: rgb(238, 224, 224);
+    background-color: #c5ddf7;
 }
 
 
@@ -50,6 +51,7 @@ tbody {
 
 
 /* العنوان */
+
 
 /* #header {
     height: 50px;
