--- a/css/styles/bills_list.css
+++ b/css/styles/bills_list.css
@@ -43,11 +43,12 @@ h3 {
 #tableFixHead thead th {
     position: sticky;
     top: -1;
-    background: rgb(223, 99, 99);
+    background: #425262;
+    color: #fff;
 }
 
 tbody tr:nth-child(odd) {
-    background-color: #f2f2f2;
+    background-color: #d9e9fa;
 }
 
 thead {
@@ -55,7 +56,7 @@ thead {
 }
 
 tbody {
-    background-color: rgb(238, 224, 224);
+    background-color: #c5ddf7;
 }
 
 th {
