--- a/css/styles/item_list.css
+++ b/css/styles/item_list.css
@@ -18,7 +18,7 @@
 
 #tableFixHead {
     overflow-y: auto;
-    height: 520px;
+    height: 500px;
     direction: ltr;
 }
 
@@ -43,7 +43,7 @@ tbody {
 h3 {
     margin-right: 1%;
     font-weight: bold;
-    margin-top: 50;
+    /* margin-top: 50; */
 }
 
 
