--- a/css/styles/account_list.css
+++ b/css/styles/account_list.css
@@ -11,7 +11,7 @@
 
 #tableFixHead {
     overflow-y: auto;
-    height: 520px;
+    height: 500px;
     direction: ltr;
 }
 
@@ -59,5 +59,5 @@ tbody {
 
 h3 {
     font-weight: bold;
-    margin-top: 50;
+    /* margin-top: 50; */
 }
