--- a/css/styles/report_comission.css
+++ b/css/styles/report_comission.css
@@ -51,6 +51,11 @@ tbody {
 #date_row {
     margin-right: 20px;
 }
+#from_date,#to_date{
+    padding-left: 0px;
+    padding-right: 0px;
+
+}
 
 
 /*report result style*/
