--- a/css/styles/report_item.css
+++ b/css/styles/report_item.css
@@ -55,6 +55,10 @@ tbody {
 #date_row {
     margin-right: 20px;
 }
+#from_date,#to_date{
+    padding-left: 0px;
+    padding-right: 0px;
+}
 
 
 /*report result style*/
