--- a/css/styles/category_card.css
+++ b/css/styles/category_card.css
@@ -14,12 +14,16 @@
     /* border-radius: 5px;
     margin: 6px;
     width: 80px; */
-    width: 63px;
+    width: 3.9em;
     box-shadow: 0px 0px 10px 1px rgba(34, 34, 36, 0.938) ;
+
 }
 
 #button_col {
-   margin-right: 25%;
+   /* margin-left: 3em; */
+}
+#btn-grp1{
+    box-shadow: 0px 0px 10px 1px rgba(34, 34, 36, 0.938) ;
 }
 
 h4 {
