--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,10 @@ body {
     position: relative;
     font-size: 17px; */
     font-family: Arial, Helvetica, sans-serif;
+    
+}
+button {
+    font-weight: bold;
 }
 
 .container {
