--- a/css/styles/account_card.css
+++ b/css/styles/account_card.css
@@ -1,34 +1,34 @@
 .container {
-    width: 700px;
-    height: 590px;
+    width: 42em;
+    height: 35em;
     margin-bottom: 0;
-    padding-top: 10px;
+    padding-top: 0.625em;
     text-align: right;
 }
 
 #button_col {
     text-align: center;
-    margin-top: 10px;
+    margin-top: 0.625em;
 }
 
 #btn-grp {
     /* border-radius: 4px;
     text-align: center;
     width: 80px; */
-    margin: 0px 2px;
-    box-shadow: 0px 0px 10px 1px rgba(34, 34, 36, 0.938) ;
-    width: 70px;
+    margin: 0em 0.125em;
+    box-shadow: 0em 0em 0.625em 0.063em rgba(34, 34, 36, 0.938);
+    width: 4.375em;
 }
 
 #lbl_code,
 #lbl_account,
 #lbl_main {
-    margin-right: 15px;
+    margin-right: 0.938em;
 }
 
 #lbl_maden,
 #lbl_daen {
-    margin-right: 15px;
+    margin-right: 0.938em;
 }
 
 #last_previous,
@@ -36,17 +36,18 @@
 #next,
 #last_next {
     /* margin: 0px 4px; */
-    border-radius: 4px;
-    box-shadow: 0px 0px 5px 1px rgba(34, 34, 36, 0.938) ;
-   
+    border-radius: 0.25em;
+    box-shadow: 0em 0em 0.313em 0.063em rgba(34, 34, 36, 0.938);
 }
+
 span {
-  content: "\00BB";
-  content: "\00AB";
-  content: "\203A";
-  content: "\2039";
+    content: "\00BB";
+    content: "\00AB";
+    content: "\203A";
+    content: "\2039";
 }
-span{
+
+span {
     font-size: 23px;
-    width: 25px;
+    width: 1.563em;
 }
