--- a/css/nav.css
+++ b/css/nav.css
@@ -20,7 +20,7 @@ header {
     /* background: linear-gradient(to right, #596169 0%, #292e33 100%); */
     width: 100%;
     float: left;
-    box-shadow: 0px 0px 20px 8px rgb(94, 93, 93);
+    box-shadow: 0em 0em 1.25em 0.5em rgb(94, 93, 93);
     border-bottom: solid 0.2em rgb(223, 56, 26);
     max-height: 4em;
     /* border-top: solid 0.4em rgb(223, 56, 26); */
@@ -28,7 +28,7 @@ header {
 
 .wrapper {
     /* max-width: 1200px; */
-    padding: 0px 20px;
+    padding: 0em 1.25em;
     margin: auto;
     width: 100%;
 }
@@ -64,7 +64,7 @@ header {
     position: relative;
     font-size: 17px;
     text-decoration: none;
-    padding: 20px 12px;
+    padding: 1.25em 0.75em;
     z-index: 1;
 }
 
@@ -81,7 +81,7 @@ header {
     position: absolute;
     top: -6px;
     left: 0px;
-    border-radius: 4px;
+    border-radius: 0.25em;
     /* transition: 0.2s; */
     z-index: -1;
 }
@@ -91,13 +91,13 @@ header {
 }
 
 .nav-menus i {
-    margin-right: 8px;
+    margin-right: 0.5em;
     font-size: 16px;
 }
 
 .toggle-btn {
     float: right;
-    height: 60px;
+    height: 3.75em;
     width: 0.9em;
     line-height: 2.5em;
     color: #fff;
@@ -116,12 +116,12 @@ header {
 .sub-menus ul {
     position: absolute;
     z-index: 1;
-    top: 54px;
+    top: 3.375em;
     background-color: #fff;
-    padding: 5px 0px;
-    min-width: 150px;
-    box-shadow: 0px 0px 8px #636363;
-    border-radius: 4px;
+    padding: 0.313em 0px;
+    min-width: 9.375em;
+    box-shadow: 0px 0px 0.5em #636363;
+    border-radius: 0.25em;
     display: none;
 }
 
@@ -130,11 +130,11 @@ header {
 }
 
 .sub-menus ul li {
-    padding: 5px 0px;
+    padding: 0.313em 0px;
 }
 
 .sub-menus ul li a {
-    padding: 8px 10px;
+    padding: 0.5em 0.625em;
     display: block;
     color: #5a30a5;
 }
@@ -145,9 +145,9 @@ header {
 
 .sub-menus ul::before {
     content: "";
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    border-bottom: 10px solid #fff;
+    border-left: 0.625em solid transparent;
+    border-right: 0.625em solid transparent;
+    border-bottom: 0.625em solid #fff;
     position: absolute;
     top: -0.49em;
     z-index: 1;
