--- a/css/styles/report_item.css
+++ b/css/styles/report_item.css
@@ -15,10 +15,10 @@
     direction: ltr;
 }
 
-#tableFixHead thead th {
+#tableFixHead thead {
     position: sticky;
     color: #fff;
-    top: 0;
+    top: -1;
 }
 
 .none {
