--- a/css/styles/payment_bonds.css
+++ b/css/styles/payment_bonds.css
@@ -1,5 +1,5 @@
 .container {
-    width: 56.25em;
+    width: 54em;
     height: 36em;
     padding: 0.3em;
 }
@@ -15,6 +15,11 @@
 h2,
 #inf_row {
     padding-right: 1em;
+}
+
+thead {
+    background: #425262;
+    color: #fff;
 }
 
 #btn-grp {
