--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 
 * {
     direction: rtl;
+    
 }
 
 body {
@@ -32,7 +33,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-button {
+.btn{
     font-weight: bold;
 }
 
