--- a/css/styles/help_file.css
+++ b/css/styles/help_file.css
@@ -12,7 +12,7 @@
 
 body {
     margin: 0;
-    font-size: 18px;
+    /* font-size: 18px; */
 }
 
 .sidebar {
@@ -25,7 +25,7 @@ body {
     height: 100%;
     overflow: auto;
     /* z-index: -1; */
-    margin-top: 72px;
+    margin-top: 64px;
 }
 
 .sidebar div {
