--- a/css/styles/payment_bonds.css
+++ b/css/styles/payment_bonds.css
@@ -23,10 +23,10 @@ thead {
 }
 
 #btn-grp {
-    border-radius: 0.25em;
-    text-align: center;
+    /* border-radius: 0.25em; */
+    /* text-align: center; */
     margin: 0.063em 0.188em;
-    width: 3.75em;
+    /* width: 3.75em; */
     box-shadow: 0px 0px 10px 1px rgba(34, 34, 36, 0.938);
     cursor: pointer;
 }
