--- a/css/styles/payment_bonds.css
+++ b/css/styles/payment_bonds.css
@@ -49,16 +49,16 @@ span {
 
 /* نافذة بطاقة حساب */
 
-.modal {
+.modal2 {
     position: fixed;
     overflow: auto;
 }
 
-.modal-dialog {
+.modal-dialog2 {
     min-width: 49.375em;
 }
 
-.modal-content {
+.modal-content2 {
     min-width: 780;
     min-height: 650px;
     border-radius: 25px;
@@ -70,19 +70,19 @@ span {
     animation-duration: 0.4s
 }
 
-.modal-header {
+.modal-header2 {
     padding: 0 10px;
     display: flex;
 }
 
-.modal-body {
+.modal-body2 {
     position: relative;
     min-width: 780;
     min-height: 630px;
     background-color: #7da6ce;
 }
 
-#iframe_account_card {
+.iframe_account_card2 {
     position: absolute;
     width: 770px;
     height: 600px;
